- ADD: TME now shows ToolTips for the filenames in
       each view to make it easier to see the
       full path. (Stefan)
- ADD: New context menu to open files with the
       default application in the commit dialog. (Stefan)
- BUG: Log messages could be shown with an additional
       empty line between the normal lines. (Stefan)
- BUG: The filepaths in the log messages were
       shown twice. (Stefan)       
- BUG: If a difference was only one line then
       TME skipped that when it should have gone
       there on file load. (Stefan)


Version 0.25
- ADD: TME shows the differences in whitespaces
       inside a line too. (Stefan)
- ADD: New option to not convert files before
       diffing with BASE. (Stefan)
- ADD: By pressing F5 in the commit dialog you
       can refresh the file list. (Stefan)
- CHG: Enable the left view on loading files
       in TME. (Stefan)
- CHG: Use a fixed width font for log messages as
       default, selectable in the settings dialog. (Stefan)
- BUG: Fixed a bug in LogDlg, where Double-click 
       and right-click behaved differently. 
       Double-Click tried to fetch the log for 
       a wrong revision. (Luebbe)
- BUG: Fixed a crash if the patchfile to apply contained
       a new but empty file. (Stefan)
- BUG: Don't try to show the context menu in TME for
       the view title. (Stefan)
- BUG: Bring the progress window to front even after
       a confirmation dialog. (Stefan)
- BUG: Pressing a key while the log dialog fetches
       all messages (or even after that) could
       throw an error. (Stefan)
       
Version 0.24
- ADD: A new separate program to apply patches,
       showing diffs and resolving conflicts.
       The program is called TortoiseMerge.
       (Stefan)
- ADD: New command to create patchfiles in
       unified diff format from a modified
       working copy. (Stefan)
- ADD: New command to apply patchfiles in
       unified diff format to a working
       copy. (Stefan)